--- a/style/main.css
+++ b/style/main.css
@@ -271,7 +271,8 @@ body {
 .eight svg:nth-child(9) { fill: #9a90da; left: 87vw; top: 94vh; }
 
 .wish-hbd {
-  font-size: 1.5rem;
+  font-size: clamp(1.6rem, 5vw, 2.4rem);
+  white-space: nowrap;
   margin: 0;
   text-transform: uppercase;
   color: #fff;
