--- a/style/main.css
+++ b/style/main.css
@@ -271,10 +271,13 @@ body {
 .eight svg:nth-child(9) { fill: #9a90da; left: 87vw; top: 94vh; }
 
 .wish-hbd {
-  font-size: 3em;
+  font-size: 2em;
   text-transform: uppercase;
   color: #fff;
   text-shadow: 0 4px 10px rgba(0,0,0,0.2);
+}
+.wish-hbd .break {
+  display: block;
 }
 
 .wish h5 {
