--- a/style/main.css
+++ b/style/main.css
@@ -271,13 +271,13 @@ body {
 .eight svg:nth-child(9) { fill: #9a90da; left: 87vw; top: 94vh; }
 
 .wish-hbd {
-  margin: 0;
   font-size: 2em;
+  margin: 5px 0; 
   text-transform: uppercase;
   color: #fff;
   text-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  display: block; 
 }
- 
 
 .wish h5 {
   font-size: 2rem;
